--- a/Atividade_1/Atividade1.html
+++ b/Atividade_1/Atividade1.html
@@ -1,12 +1,13 @@
-  <!DOCTYPE html>
-   <html>
-      <head>
-         <title> Minha Primeira Página</title>
-          <meta   charset="utf-8"> 
-      </head>
-       <body>
-            <h1>Bem-vindo ao meu primeiro site!</h1>
-         <hr>
-           <p>Estou aprendendo HTML de forma divertida!</p>
-     </body>
-    </html>
+<!DOCTYPE html>
+<html>
+ <head>   
+    <title>Minha Página com Imagem e Link</title>
+    <meta  charset="utf-8">
+ </head> 
+ <body>
+    <h1>Bem-vindo ao meu primeiro site!</h1>
+    <hr>
+    <p>Estou aprendendo HTML de forma divertida!</p>
+    <hr>
+ </body> 
+</html>
