--- a/Atividade_2/Atividade2.html
+++ b/Atividade_2/Atividade2.html
@@ -10,7 +10,7 @@
       <a href="https://ifpr.edu.br/telemaco-borba/">
       Instituto Federal do Paraná</a>
       <p>
-        veja abaixo uma imagem um limk;
+        veja abaixo uma imagem um link;
       </p> <br> 
       <img src="./imagem/images (1).jpg" width="120" height="120"  >
   </body>
