--- a/Atividade_3/Atividade3.html
+++ b/Atividade_3/Atividade3.html
@@ -6,11 +6,11 @@
     </head> 
      <body> 
       <hr>
-      <h1>Página Inicial da Atividade Avaliativa 2 do joao gulherme ferreira dos santos </h1>
+      <h1>Página Inicial da Atividade Avaliativa 2 da marya eduarda santos  </h1>
        <p> Escolha uma atividade para acessar </p> <br>
        <p>Destino</p> <a href="https://maryaeduarda33.github.io/Disciplina_Tecnologia_web_2025/Atividade_1/Atividade1.html">./Atividade_1/Atividade1.html -></a> <p>Link Atividade 1</p><br>
        <p>Destino</p> <a href="https://maryaeduarda33.github.io/Disciplina_Tecnologia_web_2025/Atividade_2/Atividade2.html">./Atividade_2/Atividade2.html -></a> <p>Link Atividade 2</p><br>
-       <img src="./imagem/Instituto_Federal_do_Paraná_-_Marca_Vertical_2015.svg.png" width="20" height="20"> 
+       <img src="./imagem/-5b4df54a4de79.webp" width="20" height="20"> 
         <p>
           e como desenvolvedor da página - marya eduarda
         </p><br>
