--- a/Atividade_2/Atividade2.html
+++ b/Atividade_2/Atividade2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
- <head> 
-    <meta charset="utf-8"
-    <title>Site com Imagem e Link</title>  
- </head>
+  <head> 
+      <meta charset="utf-8"
+      <title>Site com Imagem e Link</title>  
+  </head>
   <body>
       <h1>Minha Página com Imagem e Link</h1>
       <hr>
@@ -12,7 +12,7 @@
       <p>
         veja abaixo uma imagem um link;
       </p> <br> 
-      <img src="./imagem/images (1).jpg" width="120" height="120"  >
+      <img src="../imagem/ifpr-redondo.jpg" width="120" height="120"  >
   </body>
 </html>
  
