--- a/Atividade_2/Atividade2.html
+++ b/Atividade_2/Atividade2.html
@@ -7,12 +7,12 @@
   <body>
       <h1>Minha Página com Imagem e Link</h1>
       <hr>
-      <a href="https://ifpr.edu.br/telemaco-borba/">
       Instituto Federal do Paraná</a>
       <p>
         veja abaixo uma imagem um link;
       </p> <br> 
       <img src="../imagem/ifpr-redondo.jpg" width="120" height="120"  >
+       <a href="https://ifpr.edu.br/telemaco-borba/"></a>
   </body>
 </html>
  
