--- a/Atividade_2/Atividade2.html
+++ b/Atividade_2/Atividade2.html
@@ -2,17 +2,13 @@
 <html>
   <head> 
       <meta charset="utf-8"
-      <title>Site com Imagem e Link</title>  
+      <h1>Minha Página com Imagem e Link </title>
   </head>
   <body>
-      <h1>Minha Página com Imagem e Link</h1>
-      <hr>
-      Instituto Federal do Paraná</a>
-      <p>
-        veja abaixo uma imagem um link;
-      </p> <br> 
-      <a href="https://ifpr.edu.br/telemaco-borba/"></a>
+      <h1>Site com imagem e Link</h1>
+      <p>veja abaixo uma imagem um link; </p><br>
       <img src="../imagem/ifpr-redondo.jpg" width="120" height="120"  >
+      <a href="https://ifpr.edu.br/telemaco-borba/"Instituto federal do parana</a>
   </body>
 </html>
  
