--- a/Atividade_2/Atividade2.html
+++ b/Atividade_2/Atividade2.html
@@ -8,7 +8,7 @@
       <h1>Site com imagem e Link</h1>
       <p>veja abaixo uma imagem um link; </p><br>
       <img src="../imagem/ifpr-redondo.jpg" width="120" height="120"  >
-      <a href="https://ifpr.edu.br/telemaco-borba/"Instituto federal do parana</a>
+      <a href="https://ifpr.edu.br//"Instituto federal do parana</a>
   </body>
 </html>
  
