--- a/Atividade_2/Atividade2.html
+++ b/Atividade_2/Atividade2.html
@@ -2,13 +2,12 @@
 <html>
   <head> 
       <meta charset="utf-8"
-      <h1>Minha Página com Imagem e Link </title>
+        <title>Minha Página com Imagem e Link </title>
   </head>
   <body>
      <p>veja abaixo uma imagem um link; </p><br>
-     <h1>Site com imagem e Link</h1>
      <img src="../imagem/ifpr-redondo.jpg" width="120" height="120"  >
-     <a href="https://ifpr.edu.br//"Instituto federal do parana</a>
+     <a href="https://ifpr.edu.br/telemaco-borba/"Instituto federal do parana</a>
   </body>
 </html>
  
